--- a/Core/ECommerce.Application/ECommerce.Application.csproj
+++ b/Core/ECommerce.Application/ECommerce.Application.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
   </ItemGroup>
 
 </Project>
